--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-typewriter-hook": "^1.0.2"
@@ -26,4 +26,3 @@
     "typescript": "^5"
   }
 }
- 
